translation-tool/inputs/source_meta/objects/HSvc_RecordTypeRedirection__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Case_Record_Type_Label__c</fullName>
        <description>Case Record Type Name</description>
        <label>Case Record Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_AccountType__c</fullName>
        <label>Available for Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_AvailableforAccountRecordType__c</fullName>
        <description>The Account Record Type for which values are applicable</description>
        <label>Available for Account Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_CompOrLocAcc__c</fullName>
        <label>Company / Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RecordTypeName__c</fullName>
        <label>Case Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RedirectURLEdit__c</fullName>
        <label>Redirection URL - Edit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_RedirectURLNew__c</fullName>
        <label>Redirection URL - New</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_displayOnUI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisplayOnNewCaseUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_QuickCaseTemplateForCommunity__c</fullName>
        <description>Template name configured in this field is used to assign to case creation flow in community</description>
        <label>Hsvc_QuickCaseTemplateForCommunity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Redirection_URL_Community__c</fullName>
        <description>This field is used to store the redirection url for case create in communities.</description>
        <inlineHelpText>This field is used to store the redirection url for case create in communities.</inlineHelpText>
        <label>Redirection URL - Community New</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Valid_for_B2B_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Depending on this check-box templates will be populated for Quick case Create on account.</description>
        <label>Is Valid for B2B Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_for_B2C_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Depending on this check-box templates will be populated for Quick case Create on account.</description>
        <label>Is Valid for B2C Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HSvc_RecordTypeRedirection</label>
</CustomObject>